# autoGoogleFormComplete

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.py  generator.py  main.py  perspectives.py  pyproject.toml  requirements.txt  submitter.py
.claude/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md
.claude/agents/testing/: api-tester.md  performance-benchmarker.md  tool-evaluator.md
.github/: dependabot.yml
.github/workflows/: ci.yml
tasks/: lessons.md  todo.md
tests/: conftest.py  test_cli.py  test_diversity.py  test_generator.py  test_models_config.py  test_payload_builder.py  test_submitter_integration.py  test_validator.py
